# pycgal

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.rst  PackagesList.txt  README.rst  check_git_tag_against_version.py  pyproject.toml  setup.cfg  setup.py
cgal-patches/6.1.1/git/: patch-001
cgal-patches/6.1.1/release/: patch-001
cmake/: ship_library.cmake
conda/: README.md  pycgal-latest.yml  pycgal.yml
doc/: conf.py  index.rst
docs/: index.rst
examples/: clip_domain.py  flower_mesh.py  mesh_cubes.py  mesh_intersecting_triangles.py  pack_cells_along_discontinuities.py  split_constrained_edges.py
pycgal/: __init__.py  utils.py
pycgal/Epick/: core.py
pycgal/Epick/_impl/: as_array.py
pycgal/test/: data.py
pycgal/test/Epick/: test_Surface_mesh.py
src/: CMakeLists.txt
src/cmake/: pycgal_add_module.cmake  pycgal_add_package.cmake
src/cpp/: CMakeLists.txt
src/cpp/cmake/: pycgal_add_module.cmake  (+1 more)
src/pyCGAL/: CMakeLists.txt  Wrapper.h  bbox.cpp  dependencies.h  gog.cpp  typedefs.h
src/pyCGAL/addons/: Delaunay_mesh_adaptative_size_criteria_2.h
src/pyCGAL/addons/Mesh_2/: Delaunay_mesh_adaptative_size_criteria_2.h
src/pyCGAL/addons/Polygon_mesh_processing/: Polygon_soup.h
src/pyCGAL/wrap/: Point_3.h  Surface_mesh.h  Vector_3.h
src/pyCGAL/wrap/BGL/: Euler_operations.h  iterators.h
src/pyCGAL/wrap/BGL/detail/: Euler_operations.h
src/pyCGAL/wrap/LinearGeometryKernel/: Line_3.h  Plane_3.h  Polyline_3.h  Ray_3.h  global_kernel_functions.h
src/pyCGAL/wrap/LinearGeometryKernel/utils/: point_like.h  vector_operators.h
src/pyCGAL/wrap/Mesh_2/: Constrained_Delaunay_triangulation_2.h  Constrained_triangulation_2.h  Delaunay_mesh_adaptative_size_criteria_2.h  Delaunay_mesh_vertex_base_2.h  Delaunay_mesher_2.h  Delaunay_mesher_2_with_intersections.h  Delaunay_terrain.h  Triangulation_2.h  Triangulation_data_structure_2.h  Triangulation_vertex_base_with_info_2.h  lloyd_optimize_mesh_2.h
src/pyCGAL/wrap/Mesh_2/detail/: lloyd_optimize_mesh_2.h
src/pyCGAL/wrap/Mesh_2/utils/: as_arrays.h
src/pyCGAL/wrap/Mesh_3/: Mesh_complex_3_in_triangulation_3.h  Polyhedral_complex_mesh_domain_3.h  Polyhedral_mesh_domain_with_features_3.h  Polyhedron.h  make_mesh_3.h
src/pyCGAL/wrap/Mesh_3/detail/: make_mesh_3.h
src/pyCGAL/wrap/Mesh_3/utils/: C3t3_pmaps.h  c3t3_collection_utilities.h  c3t3_connected_components.h  c3t3_to_arrays.h  common_domain_api.h
src/pyCGAL/wrap/PMP/: clip.h  corefine.h  isotropic_remeshing.h  stitch_borders.h  triangulate_faces.h  utilities.h
src/pyCGAL/wrap/Polygon_mesh_processing/: border.h  border_halfedges.h  clip.h  connected_components.h  corefine.h  helpers.h  isotropic_remeshing.h  orient_polygon_soup.h  remesh.h  repair.h  repair_polygon_soup.h  reverse_face_orientations.h  smooth_shape.h  split.h  stitch_borders.h  surface_intersection.h  triangulate_faces.h
src/pyCGAL/wrap/Polygon_mesh_processing/detail/: border.h  border_halfedges.h  clip.h  extrude_mesh.h  isotropic_remeshing.h  polygon_soup_conversions.h  remesh.h  repair.h  repair_polygon_soup.h  smooth_shape.h  split.h  stitch_borders.h  surface_intersection.h  triangulate_faces.h
src/pyCGAL/wrap/Polygon_mesh_processing/utils/: parameter_helpers.h  polyline_visitor.h  property_helpers.h  split_along_edges.h
src/pyCGAL/wrap/Surface_mesh/: Euler_operations.h  Property_capsule.h  Surface_mesh.h  Tree.h  addons.h
src/pyCGAL/wrap/Surface_mesh/detail/: Tree.h  addons.h
src/pyCGAL/wrap/Surface_mesh/utils/: Face_connectivity.h  Surface_mesh.h  Vertex_map.h  add_vertices.h  as_arrays.h  centroids.h  extend_mesh.h  insert_isovalue.h  io.h  make_mesh.h  pack_cells_along_edges.h  property_maps.h  selection.h  split_edge_constraints_into_polylines.h
src/pyCGAL/wrap/Surface_soup/: Surface_soup.h
src/pyCGAL/wrap/Surface_soup/extensions/: Edge_graph.h  Exact_vertex_point_map.h  Extended_mesh.h  Surface_soup.h  collect_polylines.h
src/pyCGAL/wrap/core/: Bbox_3.h  Iterator_range.h
src/pyCGAL/wrap/utils/: CGAL_FT.h  Coordinates_array.h  Surface_mesh.h  Vector_of_points.h  Vector_of_scalars.h  container_proxy.h  named_parameters.h  point_like.h  polyline_to_array.h  vector_operators.h  vector_to_ostream.h  wrap_index.h  wrap_range.h  wrap_stl_container.h
src/pyCGAL/wrap/utils/Surface_mesh/: Face_connectivity.h  Vertex_map.h  add_vertices.h  as_arrays.h  centroids.h  extend_mesh.h  io.h  make_mesh.h  property_maps.h
src/pycgal/: __init__.py  utils.py
src/template/: __init__.py.template  bind_module.cpp.template  bind_module_class.cpp.template  bind_module_element.cpp.template  bind_module_function.cpp.template  module.cpp.template  wrapping_code.cpp.template
test/: conftest.py  test-requirements.txt  test_bbox.py  test_gog.py
test/Epick/: test_Plane_3.py  test_Surface_mesh.py  test_Surface_mesh_properties.py  test_buffers.py  test_global_kernel_functions.py  test_operators.py  test_vector_of_points.py
test/Mesh_2/: test_constrained_edges.py  test_elements_with_info.py  test_mesh_global.py  test_vertex_base.py
test/Mesh_3/: test_mesh_domain.py  test_mesh_polyhedron_3.py  test_polyhedral_complex_mesh_domain.py
test/Polygon_mesh_processing/: test_Euler_operations.py  test_borders.py  test_clip.py  test_corefine.py  test_corefine_toy_model.py  test_corefine_with_polylines.py  test_do_intersect.py  test_extrusions.py  test_isotropic_remeshing.py  test_polygon_mesh_bbox.py  test_polygon_soup.py  test_polygon_soup_conversion.py  test_polygon_soup_orientation.py  test_remesh.py  test_smooth_shape.py  test_split.py  test_stitch_borders.py  test_surface_intersection.py
test/Surface_mesh/: test_addons.py  test_edge_lengths.py  test_import_point.py  test_iterators_and_circulators.py  test_list_mesh_elements.py  test_properties.py  test_simple_mesh.py  test_surface_mesh_io.py  test_surface_mesh_tree.py  test_vectors.py
test/Surface_soup/: test_surface_soup.py
test/core/: test_bbox.py  test_random.py  test_vectors_of_scalars.py
test/various/: test_connected_components_of_constrained_triangulation.py  test_split_along_edges.py
(+105 files in other folders)
