[build-system]
requires = ["scikit-build-core >=0.5", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pycgal"
dynamic = ["version"]
description = "A minimal CGAL wrap with pybind11."
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.5"
# use a local build directory
build-dir = "_skbuild/{wheel_tag}-{build_type}"
# rebuild the project when the package is imported
editable.rebuild = true
# turn on verbose output for the editable mode rebuilds.
editable.verbose = true
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/pycgal/_version.py"]

[tool.scikit-build.wheel.packages]
pycgal = "src/pycgal"

[tool.setuptools_scm]
write_to = "src/pycgal/_version.py"
