[metadata]
name = pycgal
version = attr: pycgal.__version__
description = A minimal wrap of a few CGAL routines with pybind11.
license = "GPL v.3"
author = Simon Lopez
author_email = s.lopez@brgm.fr
url = https://gitlab.brgm.fr/brgm/modelisation-geologique/pycgal
keywords = CGAL

[options]
zip_safe = False
install_requires =
    numpy >= 1.17

[options.packages.find]
exclude = test
